--- a/customer/src/main/resources/application.yaml
+++ b/customer/src/main/resources/application.yaml
@@ -17,6 +17,8 @@ spring:
     show-sql: true
   profiles:
     active: default
+  zipkin:
+    baseUrl: http://${ZIPKIN_HOST}:${ZIPKIN_PORT}
 eureka:
   client:
     service-url:
