--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,25 +1,25 @@
 services:
   postgres:
     container_name: amigos-postgres
-    image: postgres
+    image: postgres:15.2
     environment:
-      POSTGRES_USER: amigoscode
-      POSTGRES_PASSWORD: password
+      POSTGRES_USER: ${POSTGRES_USERNAME}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       PGDATA: /data/postgres
     volumes:
-      - postgres:/data/postgres
+      - postgres-data:/data/postgres
     ports:
-      - "5432:5432"
+      - "${POSTGRES_PORT}:5432"
     networks:
-      - postgres
+      - spring
     restart: unless-stopped
-#  zipkin:
-#    image: openzipkin/zipkin
-#    container_name: zipkin
-#    ports:
-#      - "9411:9411"
-#    networks:
-#      - spring
+  zipkin:
+    image: openzipkin/zipkin:2
+    container_name: zipkin
+    ports:
+      - "${ZIPKIN_PORT}:9411"
+    networks:
+      - spring
 #  rabbitmq:
 #    image: rabbitmq:3.9.11-management-alpine
 #    container_name: rabbitmq
@@ -94,8 +94,7 @@ services:
 #      - postgres
 #      - rabbitmq
 networks:
-  postgres:
-    driver: bridge
+  spring:
 
 volumes:
-  postgres:
+  postgres-data:
