--- a/.env.template
+++ b/.env.template
@@ -7,3 +7,9 @@ POSTGRES_PORT=5432
 POSTGRES_HOST=localhost
 POSTGRES_USERNAME=amigoscode
 POSTGRES_PASSWORD=password
+ZIPKIN_HOST=localhost
+ZIPKIN_PORT=10131
+API_GATEWAY_PORT=10132
+RABBITMQ_HOST=localhost
+RABBITMQ_PORT=10133
+RABBITMQ_UI_PORT=11133
