--- a/amqp/pom.xml
+++ b/amqp/pom.xml
@@ -9,5 +9,12 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <packaging>jar</packaging>
-  <artifactId>clients</artifactId>
+  <artifactId>amqp</artifactId>
+
+  <dependencies>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-amqp</artifactId>
+    </dependency>
+  </dependencies>
 </project>
