--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,14 +20,14 @@ services:
       - "${ZIPKIN_PORT}:9411"
     networks:
       - spring
-#  rabbitmq:
-#    image: rabbitmq:3.9.11-management-alpine
-#    container_name: rabbitmq
-#    ports:
-#      - "5672:5672"
-#      - "15672:15672"
-#    networks:
-#      - spring
+  rabbitmq:
+    image: rabbitmq:3.9.29-management-alpine
+    container_name: rabbitmq
+    ports:
+      - "${RABBITMQ_PORT}:5672"
+      - "${RABBITMQ_UI_PORT}:15672"
+    networks:
+      - spring
 #  eureka-server:
 #    image: amigoscode/eureka-server:latest
 #    container_name: eureka-server
