--- a/.env.template
+++ b/.env.template
@@ -1,15 +1,23 @@
 EUREKA_SERVER_PORT=10130
-EUREKA_SERVER_HOST=localhost
 CUSTOMER_PORT=10111
 FRAUD_PORT=10112
 NOTIFICATION_PORT=10113
 POSTGRES_PORT=5432
-POSTGRES_HOST=localhost
-POSTGRES_USERNAME=amigoscode
+POSTGRES_USERNAME=sandangt
 POSTGRES_PASSWORD=password
-ZIPKIN_HOST=localhost
 ZIPKIN_PORT=10131
 API_GATEWAY_PORT=10132
-RABBITMQ_HOST=localhost
 RABBITMQ_PORT=10133
 RABBITMQ_UI_PORT=11133
+
+### PROFILE LOCAL ###
+EUREKA_SERVER_HOST_LOCAL=localhost
+POSTGRES_HOST_LOCAL=localhost
+ZIPKIN_HOST_LOCAL=localhost
+RABBITMQ_HOST_LOCAL=localhost
+
+### PROFILE DOCKER ###
+EUREKA_SERVER_HOST_DOCKER=eureka-server
+POSTGRES_HOST_DOCKER=postgres
+ZIPKIN_HOST_DOCKER=zipkin
+RABBITMQ_HOST_DOCKER=rabbitmq
