--- a/apigw/pom.xml
+++ b/apigw/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
     <artifactId>tutor-ms</artifactId>
-    <groupId>amigos</groupId>
+    <groupId>sandangt</groupId>
     <version>1.0-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
@@ -28,6 +28,19 @@
       <artifactId>spring-cloud-sleuth-zipkin</artifactId>
     </dependency>
   </dependencies>
+  <profiles>
+    <profile>
+      <id>dockerized</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>com.google.cloud.tools</groupId>
+            <artifactId>jib-maven-plugin</artifactId>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
   <build>
     <plugins>
       <plugin>
