--- a/apigw/src/main/resources/application-docker.yaml
+++ b/apigw/src/main/resources/application-docker.yaml
@@ -2,7 +2,7 @@ spring:
   application:
     name: gateway-api
   zipkin:
-    baseUrl: http://${ZIPKIN_HOST_LOCAL}:${ZIPKIN_PORT}
+    baseUrl: http://${ZIPKIN_HOST_DOCKER}:${ZIPKIN_PORT}
   cloud:
     gateway:
       routes:
@@ -15,6 +15,6 @@ server:
 eureka:
   client:
     service-url:
-      defaultZone: http://${EUREKA_SERVER_HOST_LOCAL}:${EUREKA_SERVER_PORT}/eureka
+      defaultZone: http://${EUREKA_SERVER_HOST_DOCKER}:${EUREKA_SERVER_PORT}/eureka
     fetch-registry: true
     register-with-eureka: true
