--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,6 @@
 services:
   postgres:
-    container_name: amigos-postgres
+    container_name: tutor-ms-postgres
     image: postgres:15.2
     environment:
       POSTGRES_USER: ${POSTGRES_USERNAME}
@@ -11,89 +11,90 @@ services:
     ports:
       - "${POSTGRES_PORT}:5432"
     networks:
-      - spring
+      - postgres
     restart: unless-stopped
   zipkin:
     image: openzipkin/zipkin:2
-    container_name: zipkin
+    container_name: tutor-ms-zipkin
     ports:
       - "${ZIPKIN_PORT}:9411"
     networks:
       - spring
   rabbitmq:
     image: rabbitmq:3.9.29-management-alpine
-    container_name: rabbitmq
+    container_name: tutor-ms-rabbitmq
     ports:
       - "${RABBITMQ_PORT}:5672"
       - "${RABBITMQ_UI_PORT}:15672"
     networks:
       - spring
-#  eureka-server:
-#    image: amigoscode/eureka-server:latest
-#    container_name: eureka-server
-#    ports:
-#      - "8761:8761"
-#    environment:
-#      - SPRING_PROFILES_ACTIVE=docker
-#    networks:
-#      - spring
-#    depends_on:
-#      - zipkin
-#  apigw:
-#    image: amigoscode/apigw:latest
-#    container_name: apigw
-#    ports:
-#      - "8083:8083"
-#    environment:
-#      - SPRING_PROFILES_ACTIVE=docker
-#    networks:
-#      - spring
-#    depends_on:
-#      - zipkin
-#      - eureka-server
-#  customer:
-#    image: amigoscode/customer:latest
-#    container_name: customer
-#    ports:
-#      - "8080:8080"
-#    environment:
-#      - SPRING_PROFILES_ACTIVE=docker
-#    networks:
-#      - spring
-#      - postgres
-#    depends_on:
-#      - zipkin
-#      - postgres
-#      - rabbitmq
-#  fraud:
-#    image: amigoscode/fraud:latest
-#    container_name: fraud
-#    ports:
-#      - "8081:8081"
-#    environment:
-#      - SPRING_PROFILES_ACTIVE=docker
-#    networks:
-#      - spring
-#      - postgres
-#    depends_on:
-#      - zipkin
-#      - postgres
-#      - rabbitmq
-#  notification:
-#    image: amigoscode/notification:latest
-#    container_name: notification
-#    ports:
-#      - "8082:8082"
-#    environment:
-#      - SPRING_PROFILES_ACTIVE=docker
-#    networks:
-#      - spring
-#      - postgres
-#    depends_on:
-#      - zipkin
-#      - postgres
-#      - rabbitmq
+  eureka-server:
+    image: sandangt/eureka-server:latest
+    container_name: tutor-ms-eureka-server
+    ports:
+      - "${EUREKA_SERVER_PORT}:${EUREKA_SERVER_PORT}"
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+    networks:
+      - spring
+    depends_on:
+      - zipkin
+  apigw:
+    image: sandangt/apigw:latest
+    container_name: tutor-ms-apigw
+    ports:
+      - "${API_GATEWAY_PORT}:${API_GATEWAY_PORT}"
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+    networks:
+      - spring
+    depends_on:
+      - zipkin
+      - eureka-server
+  customer:
+    image: sandangt/customer:latest
+    container_name: tutor-ms-customer
+    ports:
+      - "${CUSTOMER_PORT}:${CUSTOMER_PORT}"
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+    networks:
+      - spring
+      - postgres
+    depends_on:
+      - zipkin
+      - postgres
+      - rabbitmq
+  fraud:
+    image: sandangt/fraud:latest
+    container_name: tutor-ms-fraud
+    ports:
+      - "${FRAUD_PORT}:${FRAUD_PORT}"
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+    networks:
+      - spring
+      - postgres
+    depends_on:
+      - zipkin
+      - postgres
+      - rabbitmq
+  notification:
+    image: sandangt/notification:latest
+    container_name: tutor-ms-notification
+    ports:
+      - "${NOTIFICATION_PORT}:${NOTIFICATION_PORT}"
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+    networks:
+      - spring
+      - postgres
+    depends_on:
+      - zipkin
+      - postgres
+      - rabbitmq
 networks:
+  postgres:
   spring:
 
 volumes:
